# mbse-agent

./: .gitignore  README.md  requirements.txt
prompts/: node1_clarify.txt  node2_sysml.txt
src/: llm_client.py  node1_requirement.py
src_annotated/: llm_client.py  main.py  node1_requirement.py  node2_sysml.py  node3_modelica.py  node4_summary.py  schemas.py
week2/: README.md  WEEK2_SUMMARY.md
week2/docs/: toolchain.md
week2/prompts/: node1_completeness.txt  node3_modelica.txt
week2/src/: main.py  node2_sysml.py  node3_modelica.py  node4_summary.py  schemas.py
week2/src_commented/: __init__.py  llm_client.py  main.py  node1_requirement.py  node2_sysml.py  node3_modelica.py  node4_summary.py  schemas.py
week3/: V2-优缺点.md  pyproject.toml  可用领域说明.txt
week3/experiments/: run_experiment.py  test_cases.json
week3/prompts/: node1_completeness.txt  node2_sysml.txt  node3_modelica.txt
week3/src/: llm_client.py  main.py  node1_requirement.py  node2_sysml.py  node3_modelica.py  node4_summary.py  pipeline.py  schemas.py  utils.py
week3/src_commented/: __init__.py  llm_client.py  main.py  node1_requirement.py  node2_sysml.py  node3_modelica.py  node4_summary.py  pipeline.py  schemas.py  utils.py
